<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:id="@+id/btnAdd"
        android:text="Notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/controlText"
        android:gravity="center"
        android:text="Deneme"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectedSpinnerItem"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />





</LinearLayout>